<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/user_space">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user"
                    android:title="@string/nav_user"
                    android:actionLayout="@layout/ui_nav_item"/>
                <item
                    android:id="@+id/nav_repos"
                    android:title="@string/nav_repos" />
                <item
                    android:id="@+id/nav_stats"
                    android:title="@string/nav_stats" />
            </group>

        </menu>
    </item>
    <item
        android:id="@+id/nav_disconnect"
        android:title="@string/nav_disconnect" />
</menu>
